--- a/contact.html
+++ b/contact.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="keywords" content="3D Printing, Contact Us">
-        <meta name="description" content="Contact Us">
+    <meta name="keywords" content="3D Printing, Contact Us">
+    <meta name="description" content="Contact Us">
 
-        <title>Contact</title>
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Contact</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <!--HEADER-->
-        <header>
-            <img src="img/logo.png" alt="3D Printing Logo">
-            <a href="home.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
-        </header>
+    <!--HEADER-->
+    <header>
+        <img src="img/logo.png" alt="3D Printing Logo">
+        <a href="home.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+    </header>
 
-        <!--CONTACT FORM-->
-        <main>
-            <h2>Contact Us</h2>
-            <form action="process-contact.php" method="post">
-                <fieldset>
-                    <legend>Contact Information</legend>
+    <!--CONTACT FORM-->
+    <main>
+        <h2>Contact Us</h2>
+        <form action="process-contact.php" method="post">
+            <fieldset>
+                <legend>Contact Information</legend>
 
-                    <label for="firstName">First name:</label>
-                    <input id="firstName" required>
+                <label for="firstName">First name:</label>
+                <input id="firstName" required>
 
-                    <label for="lastName">Last name:</label>
-                    <input id="lastName" required>
+                <label for="lastName">Last name:</label>
+                <input id="lastName" required>
 
-                    <label for="mail">Email:</label>
-                    <input type="email" id="mail"
-                        placeholder="johndoe.@gmail.com"
-                        required>
+                <label for="mail">Email:</label>
+                <input type="email" id="mail" placeholder="johndoe.@gmail.com" required>
 
-                </fieldset>
-                <!--CHECKBOXES-->
-                <fieldset>
-                    <legend>Your Interests</legend>
+            </fieldset>
+            <!--CHECKBOXES-->
+            <fieldset>
+                <legend>Your Interests</legend>
 
-                    <input type="checkbox" id="industry">
-                    <label for="industry">Industry</label>
+                <input type="checkbox" id="industry">
+                <label for="industry">Industry</label>
 
-                    <input type="checkbox" id="technical">
-                    <label for="technical">Technical</label>
+                <input type="checkbox" id="technical">
+                <label for="technical">Technical</label>
 
-                    <input type="checkbox" id="career">
-                    <label for="career">Career</label>
-                </fieldset>
+                <input type="checkbox" id="career">
+                <label for="career">Career</label>
+            </fieldset>
 
-                <!--DROPDOWN-->
-                <fieldset>
-                    <legend>Your Role</legend>
+            <!--DROPDOWN-->
+            <fieldset>
+                <legend>Your Role</legend>
 
-                    <select name="dropdown">
-                        <option value="Writer">Writer</option>
-                        <option value="Contributor">Contributor</option>
-                        <option value="Administrator">Administrator</option>
-                    </select>
-                </fieldset>
+                <select name="dropdown">
+                    <option value="Writer">Writer</option>
+                    <option value="Contributor">Contributor</option>
+                    <option value="Administrator">Administrator</option>
+                </select>
+            </fieldset>
 
-                <input type="submit">
+            <input type="submit">
 
-            </form>
-        </main>
+        </form>
+    </main>
 
-        <!--FOOTER-->
-        <footer>
-            <p>This website uses cookies to improve your experiece, by clicking
-                "accept cookies" you consent to our use
-                of cookies</p>
-            <a href="#">Accept Cookies</a>
-        </footer>
-    </body>
+    <!--FOOTER-->
+    <footer>
+        <p>This website uses cookies to improve your experiece, by clicking
+            "accept cookies" you consent to our use
+            of cookies</p>
+        <a href="#">Accept Cookies</a>
+    </footer>
+
+    <script src="javascript.js"> </script>
+
+</body>
 
 </html>
