--- a/home.html
+++ b/home.html
@@ -9,10 +9,11 @@
     <meta name="description" content="Welcome to 3D Printing">
 
     <title>A1 HTML Assignment</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
-<body>
+<body id="highContrast">
 
     <!--HEADER-->
     <header>
@@ -20,6 +21,9 @@
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <div>
+            <button id="button">High Contrast</button>
+        </div>
     </header>
 
     <main>
@@ -165,6 +169,7 @@
         <a href="#">Accept Cookies</a>
     </footer>
     <script src="javascript.js"> </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
