--- a/home.html
+++ b/home.html
@@ -162,11 +162,11 @@
         </section>
     </main>
     <!--FOOTER SECTION-->
-    <footer>
-        <p>This website uses cookies to improve your experiece, by
+    <footer id="footer">
+        <p id="cookiesText">This website uses cookies to improve your experiece, by
             clicking "accept cookies" you consent to our use
             of cookies</p>
-        <a href="#">Accept Cookies</a>
+        <a href="" id="cookies">Accept Cookies</a>
     </footer>
     <script src="javascript.js"> </script>
     <script src="script.js"></script>
