Reading assistance & Keyboard shortcut
- Add an HTML element that allows a use to see a high-contrast version of the site. This element should act as a "toggle" button. This would entail using high-contrast colours on the site instead of the ones we already used in the CSS assignment. Consider background colours and font colors.
- Add more padding around elements and increase the line height and letter spacing.

- Add a keyboard shortcut, "Ctrl + A", that would toggle Reading Assistance on and off.

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="highContrast">
 
     <!--HEADER-->
     <header>
@@ -21,6 +21,9 @@
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <div>
+            <button class="button">High Contrast</button>
+        </div>
     </header>
 
     <!--CONTACT FORM-->
@@ -71,14 +74,14 @@
     </main>
 
     <!--FOOTER-->
-    <footer>
-        <p>This website uses cookies to improve your experiece, by clicking
-            "accept cookies" you consent to our use
+    <footer class="footer">
+        <p class="cookiesText">This website uses cookies to improve your experiece, by
+            clicking "accept cookies" you consent to our use
             of cookies</p>
-        <a href="#">Accept Cookies</a>
+        <a href="" class="cookies">Accept Cookies</a>
     </footer>
-
-    <script src="javascript.js"> </script>
+    
+    <script src="js/javascript.js"> </script>
 
 </body>
 
