--- a/home.html
+++ b/home.html
@@ -9,11 +9,10 @@
     <meta name="description" content="Welcome to 3D Printing">
 
     <title>A1 HTML Assignment</title>
-    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
-<body id="highContrast">
+<body class="highContrast">
 
     <!--HEADER-->
     <header>
@@ -22,7 +21,7 @@
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <div>
-            <button id="button">High Contrast</button>
+            <button class="button">High Contrast</button>
         </div>
     </header>
 
@@ -148,7 +147,7 @@
         </section>
 
         <!--TABLE SECTION-->
-        <section id="section">
+        <section class="section">
             <h2>Table of Site Visitors</h2>
         </section>
 
@@ -162,14 +161,14 @@
         </section>
     </main>
     <!--FOOTER SECTION-->
-    <footer id="footer">
-        <p id="cookiesText">This website uses cookies to improve your experiece, by
+    <footer class="footer">
+        <p class="cookiesText">This website uses cookies to improve your experiece, by
             clicking "accept cookies" you consent to our use
             of cookies</p>
-        <a href="" id="cookies">Accept Cookies</a>
+        <a href="" class="cookies">Accept Cookies</a>
     </footer>
-    <script src="javascript.js"> </script>
-    <script src="script.js"></script>
+    <script src="js/javascript.js"> </script>
+    <script src="js/javascriptTable.js"></script>
 </body>
 
 </html>
