--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body class="highContrast">
 
     <!--HEADER-->
     <header>
@@ -17,6 +17,9 @@
         <a href="home.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
+        <div>
+            <button class="button">High Contrast</button>
+        </div>
     </header>
 
     <!--ABOUT-->
@@ -36,14 +39,14 @@
     </main>
 
     <!--FOOTER-->
-    <footer>
-        <p>This website uses cookies to improve your experiece, by clicking
-            "accept cookies" you consent to our use
+    <footer class="footer">
+        <p class="cookiesText">This website uses cookies to improve your experiece, by
+            clicking "accept cookies" you consent to our use
             of cookies</p>
-        <a href="#">Accept Cookies</a>
+        <a href="" class="cookies">Accept Cookies</a>
     </footer>
 
-    <script src="javascript.js"> </script>
+    <script src="js/javascript.js"> </script>
 
 </body>
 
